    creating certain multistate data sets.
    \item Depricate the type="mstate" option of Surv; a factor variable
    is the better option.
    \item Add code to ignore the robust option to coxph for a penalized
    model; this combination makes no sense and does not appear in any
    examples. However, to my dismay I have just discovered that in the
    prior code this does not outright fail as it should, and produces
    *something* that is returned as a purported variance.
}}
\section{Changes in version 3.8-2}{
  \itemize{
    \item Round 2 of updates, to pass reverse dependency checks. In
    3.8-1 I had made a silly copy-paste mistake in the update to
    survfit, and also added a new test for my changes (doublecolon.R).
    Of course, the only check that I forgot to include in the
    doublecolon file was for ... survfit (coxph, survdiff, survreg,
    survcheck, and concordance were all there).
}}
\section{Changes in version 3.8-1}{
  \itemize{
    \item Changes needed to pass reverse dependency checks, largely
    tightening things up wrt to the formula fix. In summary, the
    survival package routines now ensure that anything in a formula that
    is a part of the package, is found in the package first.  There is
    no need for things like coxph(survival::Surv(time, status) ~ ph.ecog
    + survival::strata(inst), data=lung), in fact you should not do
    this. Using survival::coxph rather than coxph is a completely
    different question, these updates have no bearing on that, only on
    functions within a formula.  Note that prior to this update using
    survival::strata(inst) above would give the wrong answer; because ::
    mucks up formula processing the term would not be recognized as a
    stratum, and the resulting fit equivalent to using factor(inst).
}}

\section{Changes in version 3.8-0}{
  \itemize{
    \item Survival curves which used the id option, for a coxph fit with
    time dependent coefficients, would have too small a std error after