@@ -30,9 +30,8 @@ export(Surv, Surv2, Surv2data, aeqSurv, aareg, agreg.fit,
        pspline, pyears, ratetableDate, ratetable,
        ridge, royston, rsurvreg, rttright,statefig, strata, 
        survSplit, survcheck, survcondense, survdiff, survexp,  survfit,
-       survfit0, survfit.formula,
-       coxsurv.fit, survfitKM,
-       survobrien,  
+       survfit0, survfit_confint, survfit.formula,
+       coxsurv.fit, survfitKM, survobrien,  
        survpenal.fit, 
        survreg, survreg.control, survreg.fit,
        survreg.distributions, survregDtest, tcut, totimeline, fromtimeline,
