@@ -383,6 +383,11 @@ rval$var <- solve(vmean)
 <<cox.zph>>=
 "[.cox.zph" <- function(x, ..., drop=FALSE) {
     i <- ..1
+    if (is.logical(i)) i <- which(i)
+    else if (is.character(i)) 
+        i <- match(i, colnames(x$y))
+    if (any(is.na(i) | i> ncol(x$y))) stop ("invalid variable requested")
+
     if (!is.null(x$strata)) {
         y2 <- x$y[,i,drop=FALSE]
         ymiss <- apply(is.na(y2), 1, all)
